# mock-interview

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SETUP.md  backend plan  complete-archi.excalidraw  docker-compose.dev.yml  docker-compose.yml  proposed-architecture.drawio  refactor_plan.md
.github/workflows/: ci.yml
Client/: Dockerfile  next.config.js  package-lock.json  package.json
Client/src/app/: AuthContext.tsx  error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
Client/src/lib/: api-client.ts
data-sheet/: QUESTIONS DATASHEET - 1.xlsx
independent-services/feedback-gen-service/: .gcloudignore  .gitignore  Dockerfile  main.py  requirements.txt
independent-services/feedback-gen-service/src/: config.py
independent-services/transcipt-gen-service/: .gcloudignore  .gitignore  main.py  requirements.txt
interview-mock-client/: package-lock.json  package.json  tsconfig.json
interview-mock-client/src/app/: AuthContext.tsx  layout.tsx  page.tsx
main-api/: .gcloudignore  Dockerfile  package-lock.json  package.json  server.js
services/feedback_service/: .gitignore  Dockerfile  deploy.sh  pyproject.toml
services/main_api/: .gcloudignore  Dockerfile  package-lock.json  package.json  pyproject.toml  server.js
services/main_api/app/: config.py  dependencies.py  logging_config.py  main.py
services/main_api/app/models/: __init__.py  interview.py  question.py  session.py  user.py
services/main_api/app/routers/: auth.py  internal.py  interviews.py  questions.py  realtime.py
services/main_api/app/schemas/: __init__.py  auth.py  interviews.py  questions.py
services/main_api/app/services/: auth.py  files.py  mq_publisher.py  realtime_proxy.py
services/main_api/scripts/: seed_questions.py
services/main_api/scripts/seed/: questions.json
services/main_api/src/models/: question.js
services/main_api/src/routes/: feedbackTask.js  routes.js
services/main_api/src/services/: rabbitMQ.js
services/main_api/tests/: conftest.py  test_auth.py  test_internal.py  test_interviews.py  test_questions.py  test_realtime.py
services/transcript_service/: .gitignore  Dockerfile  deploy.sh  main.py  pyproject.toml
services/transcript_service/app/: config.py  health.py  worker.py
services/transcript_service/app/handlers/: transcript.py
services/transcript_service/app/services/: whisper.py
services/transcript_service/src/: config.py
services/transcript_service/tests/: test_handler.py  test_whisper.py
shared/: pyproject.toml
shared/mock_interview_shared/: __init__.py
shared/mock_interview_shared/mq/: __init__.py  client.py
shared/mock_interview_shared/schemas/: enums.py  messages.py
shared/mock_interview_shared/utils/: logging.py
shared/tests/: test_logging.py  test_schemas.py
(+43 files in other folders)
