[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-interview-main-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "beanie>=1.26,<2.0",
    "motor>=3.4",
    "aio-pika>=9.0",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "mock-interview-shared",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mongomock-motor>=0.0.21",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
mock-interview-shared = { path = "../../shared", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
